# IsaacGymMultiAgent

./: .coveragerc  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
examples/: igma_tasks.py
examples/cfg/: config.yaml
examples/cfg/task/: BallJoust.yaml  LeggedGymA1.yaml
examples/cfg/train/: AntJoustPPO.yaml  AntPPO.yaml  BallJoustPPO.yaml  ParallelAntPPO.yaml
examples/original/: train.py
examples/rsl_rl/: igma_tasks.py  train.py
examples/sb3/: train.py
examples/tianshou/: cfg  train.py
igma/: __init__.py  functional.py
igma/cfg/: config.yaml
igma/cfg/task/: ParallelAnt.yaml  QuadcopterJoust.yaml  a1.yaml
igma/cfg/train/: BallJoustPPO.yaml  LeggedGymA1PPO.yaml  QuadcopterJoustPPO.yaml  a1PPO.yaml  sb3ppo.yaml
igma/tasks/: all.py  external.py  parallel.py
igma/tasks/base/: ma_vec_task.py
igma/tasks/joust/: __init__.py  balljoust.py
igma/tasks/legged_gym/: __init__.py
igma/utils/: omegaconf.py  patch.py  paths.py  registry.py  testbench.py
igma/wrappers/: gym.py  rsl_rl.py  sb3.py  tianshou.py  transformed.py
